First working version of yaml based data renderer